# sofa

./: CMakeLists.txt
SofaKernel/SofaFramework/: SofaMacros.cmake
SofaKernel/modules/SofaBaseCollision/: CubeModel.cpp
SofaKernel/modules/SofaBaseLinearSolver/: FullMatrix.h  MatrixLinearSolver.h  MatrixLinearSolver.inl
SofaKernel/modules/SofaBaseMechanics/: BarycentricMapping.inl
SofaKernel/modules/SofaBaseTopology/: EdgeSetTopologyContainer.cpp  EdgeSetTopologyModifier.cpp  HexahedronSetTopologyContainer.cpp  MeshTopology.h  QuadSetTopologyContainer.cpp  TetrahedronSetTopologyContainer.cpp  TriangleSetTopologyContainer.cpp
SofaKernel/modules/SofaBaseVisual/: VisualModelImpl.cpp  VisualModelImpl.h
SofaKernel/modules/SofaDeformable/: MeshSpringForceField.inl  StiffSpringForceField.h  (+1 more)
applications/plugins/: CMakeLists.txt
applications/plugins/SofaCarving/: CMakeLists.txt  CarvingManager.cpp  CarvingManager.h  SofaCarvingConfig.cmake.in
applications/plugins/SofaCarving/src/SofaCarving/: CarvingManager.cpp  CarvingManager.h
applications/projects/: CMakeLists.txt
modules/SofaConstraint/: ConstraintAnimationLoop.cpp  FreeMotionAnimationLoop.cpp  GenericConstraintCorrection.cpp  GenericConstraintSolver.cpp  LCPConstraintSolver.cpp  LinearSolverConstraintCorrection.h  LinearSolverConstraintCorrection.inl  PrecomputedConstraintCorrection.h  UncoupledConstraintCorrection.h  UncoupledConstraintCorrection.inl
modules/SofaGeneralEngine/: SubsetTopology.cpp
modules/SofaGeneralSimpleFem/: CMakeLists.txt
modules/SofaHaptics/: LCPForceFeedback.h  LCPForceFeedback.inl
modules/SofaTopologyMapping/: Tetra2TriangleTopologicalMapping.cpp
modules/SofaUserInteraction/: MechanicalStateController.cpp  MechanicalStateController.h  MechanicalStateController.inl  TopologicalChangeManager.cpp
(+256 files in other folders)
